--- a/index.html
+++ b/index.html
@@ -82,9 +82,21 @@ Purchase: http://themeforest.net/user/kamleshyadav
                                 </div>
                             </div>
                             <div class="prt_about_details">
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going
-                                    to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
-                                    this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p>
+                                <p>The Vision
+I’ve always been fascinated with the mind; how easily we can all flip between feeling incredibly strong and empowered to painfully self-critical and fragile.  That some injuries, physical or emotional, can have sustained and long-term effects on our confidence and beliefs, and how some people struggle to overcome such challenges, while others thrive.  This I found especially intriguing considering that our ‘hardware’ is, in the most part, the same for everyone.
+
+The Foundation
+ In 2006 I joined the Royal Air Force and although I’ve thoroughly enjoyed my time in the Service, my career was threatened in the first year having had a serious car accident with a prognosis of not walking unaided again.  Having spent two years learning how to walk, exercise and then pass the military fitness test I can safely say I’ve practiced first-hand the rollercoaster of emotions that come with failure, as well as focus! 
+In 2013 I created STARTfit, a vision focussed around helping others with their own health, fitness and rehabilitation goals.  Throughout my journey it amazed me that so many businesses and products offered to address the ‘symptoms’, and yet hardly anyone was looking into the cause; negative self-talk, faulty thinking patterns and addressing old trauma. More importantly, the only avenue to challenge this was through counselling – and for some this meant reliving old trauma that can be painful and counterproductive.
+"It occurred to me that nobody seemed to be proactively bridging the gap between the mind-body connection through logical, practical means"
+
+
+The Creation
+
+Before, during and after my STARTfit career I focussed heavily on learning about the brain; the hardware, the software, and how to help rewire it.  I won’t bore you here with the training (you can catch all that in the qualifications section!) but you can be sure that the journey was fascinating and quite frankly mind-blowing (no pun intended…). What conventional therapies offer really is the tip of the iceberg, there’s so much more to the mind body connection that I truly believe no one field of study or specialisation can truly uncover it alone.  
+Being able to offer you a unique perspective of neurological science, cognitive rehabilitation, coaching and dare I say it, a combination of classical and modern techniques (all based in science), is why I truly believe The Mind Physio paradigm is different. We want to help you bypass the symptoms, make long term changes at the core and ultimately rewire the software.
+Be sure to get in touch!
+.</p>
                                 <a href="#" class="prt_btn">Download Resume</a> <a href="#" class="prt_btn">Hire Me</a>
                             </div>
                         </div>
