--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- Begin Head -->
 
 <head>
-    <title>Portfolio Responsive HTML Template</title>
+    <title>Natasha Minnikin - the Mind Physio</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Portfolio">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Favicon Link -->
-    <link rel="shortcut icon" type="image/png" href="images/header/favicon.png">
+    <link rel="shortcut icon" type="image/icon" href="images/header/favicon.ico">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-7 col-sm-10 col-xs-12 col-lg-offset-6 col-md-offset-5 col-sm-offset-2 col-xs-offset-0">
-                        <h1>I`m Nancy Martin</h1>
+                        <h1>I`m Natasha Minnikin</h1>
                     </div>
                 </div>
             </div>
@@ -71,25 +71,28 @@
                             <div class="prt_heading_wrapper_2">
                                 <div class="prt_heading prt_toppadder50">
                                     <h1>About ME</h1>
-                                    <p>WHo AM i</p>
+                                    <p>Who Am i</p>
                                 </div>
                             </div>
                             <div class="prt_about_details">
-                                <p>The Vision I’ve always been fascinated with the mind; how easily we can all flip between feeling incredibly strong and empowered to painfully self-critical and fragile. That some injuries, physical or emotional, can have
-                                    sustained and long-term effects on our confidence and beliefs, and how some people struggle to overcome such challenges, while others thrive. This I found especially intriguing considering that our ‘hardware’ is, in
-                                    the most part, the same for everyone. The Foundation In 2006 I joined the Royal Air Force and although I’ve thoroughly enjoyed my time in the Service, my career was threatened in the first year having had a serious
-                                    car accident with a prognosis of not walking unaided again. Having spent two years learning how to walk, exercise and then pass the military fitness test I can safely say I’ve practiced first-hand the rollercoaster
-                                    of emotions that come with failure, as well as focus! In 2013 I created STARTfit, a vision focussed around helping others with their own health, fitness and rehabilitation goals. Throughout my journey it amazed me that
-                                    so many businesses and products offered to address the ‘symptoms’, and yet hardly anyone was looking into the cause; negative self-talk, faulty thinking patterns and addressing old trauma. More importantly, the only
-                                    avenue to challenge this was through counselling – and for some this meant reliving old trauma that can be painful and counterproductive. "It occurred to me that nobody seemed to be proactively bridging the gap between
-                                    the mind-body connection through logical, practical means" The Creation Before, during and after my STARTfit career I focussed heavily on learning about the brain; the hardware, the software, and how to help rewire
-                                    it. I won’t bore you here with the training (you can catch all that in the qualifications section!) but you can be sure that the journey was fascinating and quite frankly mind-blowing (no pun intended…). What conventional
-                                    therapies offer really is the tip of the iceberg, there’s so much more to the mind body connection that I truly believe no one field of study or specialisation can truly uncover it alone. Being able to offer you a unique
-                                    perspective of neurological science, cognitive rehabilitation, coaching and dare I say it, a combination of classical and modern techniques (all based in science), is why I truly believe The Mind Physio paradigm is
-                                    different. We want to help you bypass the symptoms, make long term changes at the core and ultimately rewire the software. Be sure to get in touch! .
+                                <p>I’ve always been fascinated with the mind; how easily we can all flip between feeling incredibly strong and empowered to painfully self-critical and fragile. In particular, how some injuries, physical or emotional, can
+                                    have sustained and long-term effects on our confidence and beliefs, and how some people struggle to overcome such challenges, while others thrive. This I found especially intriguing considering that our ‘hardware’ is,
+                                    in the most part, the same for everyone”
                                 </p>
-                                <a href="#" class="prt_btn">Download Resume</a> <a href="#" class="prt_btn">Hire Me</a>
+                                <p>Being able to help others learn about the brain; the hardware, the software, and how to help rewire it, is at the core of Natasha’s passion; helping you feel empowered and in control of your thoughts, feeling and behaviours,
+                                    regardless of what life throws at you</p>
                             </div>
+                        </div>
+                        <div class="prt_heading prt_toppadder50">
+                            <h1 style="color: white;">About Me</h1>
+                            <p>The Foundation</p>
+                        </div>
+                        <div class="prt_about_details">
+                            <p>I joined the Royal Air Force in 2006 and in fact still teach Service personnel cognitive health techniques that are based in Neuro-Linguistic Programming (NLP), Cognitive Behaviour Therapy (CBT) and Trauma management. However,
+                                my military career was threatened soon after commissioning having been involved in a serious car accident, leaving me with the prognosis that I would never walk unaided again. Having spent two years in rehabilitation re-learning
+                                how to walk, exercise and then ultimately pass the military fitness test I can safely say I’ve practiced first-hand the rollercoaster of emotions that come with failure, as well as focus. This experience led me to study
+                                neurology, specialising in acquired brain injury, where I worked alongside the NHS, and the charity ARNI (Action for Rehabilitation from Neurological Injury) while running my own business, STARTfit, which I founded in 2013.
+                            </p>
                         </div>
                     </div>
                     <div class="prt_about_edulearn_wrapper prt_bottompadder115">
