--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <p>Copyright © 2018 <a href="#">Portfolio</a>. All Rights Reserved</p>
+                            <p>Copyright © 2020 <a href="#">The Mind Physio</a>. All Rights Reserved</p>
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -308,9 +308,12 @@
                                 <h1>How can I help you ?</h1>
                                 <div class="prt_contact_form" name="contact">
                                     <div class="row">
-                                        <form data-netlify="true">
+                                        <form data-netlify="true" netlify-honeypot="bot-field">
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <input type="text" name="first_name" placeholder="Your Name" class="require">
+                                            </div>
+                                            <div class="hidden">
+                                                <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <input type="text" name="email" placeholder="Your Email" class="require" data-valid="email" data-error="Email should be valid.">
@@ -342,19 +345,19 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <div class="prt_contact_details_box details_box1">
                                 <h4>Phone</h4>
-                                <p>07976434250</p>
+                                <p><a href="tel:07976434250">07976434250</a></p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <div class="prt_contact_details_box details_box2">
                                 <h4>Email</h4>
-                                <p><a href="#">natasha@themindphysio.com</a>
+                                <p><a href="mailto:natasha@holistic-neuro-academy.com">natasha@neuro-holistic-academy.com</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <div class="prt_contact_details_box details_box3">
                                 <h4>Address</h4>
-                                <p>The Lodge, Wood Lane, Hinstock TF9 2TA</p>
+                                <p><a href="https://www.google.com/maps/place/Wood+Ln,+Hinstock,+Market+Drayton+TF9+2TA/@52.8424672,-2.4601251,16z/data=!3m1!4b1!4m5!3m4!1s0x487a87d07d174595:0x3c1540a6ca06b50!8m2!3d52.842103!4d-2.4556595">The Lodge, Wood Lane, Hinstock TF9 2TA</a></p>
                             </div>
                         </div>
                     </div>
@@ -530,7 +533,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <p>Copyright © 2018 <a href="#">Portfolio</a>. All Rights Reserved</p>
+                            <p>Copyright © 2020 <a href="#">The Mind Physio</a>. All Rights Reserved</p>
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
