added experience timeline

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="prt_heading_wrapper">
                                 <div class="prt_heading">
-                                    <h1>EDucation</h1>
-                                    <p>learning</p>
+                                    <h1>Training</h1>
+                                    <p>& CPD</p>
                                 </div>
                             </div>
                             <div class="prt_about_learnsection">
@@ -108,36 +108,89 @@
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0">
                                         <div class="prt_about_learnbox_right">
                                             <div class="prt_about_learnbox_year">
-                                                <h1>2004</h1>
+                                                <h1>2020</h1>
                                             </div>
                                             <div class="prt_about_learnbox_info">
-                                                <h4>Diploma In UI/UX Design</h4>
-                                                <span>New York</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h5>Working with Adverse Childhood Experiences</h5>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                         <div class="prt_about_learnbox_left">
                                             <div class="prt_about_learnbox_year">
-                                                <h1>2006</h1>
+                                                <h1>2019</h1>
                                             </div>
                                             <div class="prt_about_learnbox_info">
-                                                <h4>Diploma In Web Design</h4>
-                                                <span>New York</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h5>Licensed HeartMath Coach</h5>
+                                                <h5>NLP Trainer Hypnosis Trainer</h5>
+                                                <h5>Tuning Fork Level 1 Practitioner</h5>
+                                                <h5>ASIST Suicide Prevention Training</h5>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0">
                                         <div class="prt_about_learnbox_right">
                                             <div class="prt_about_learnbox_year">
-                                                <h1>2008</h1>
+                                                <h1>2018</h1>
                                             </div>
                                             <div class="prt_about_learnbox_info">
-                                                <h4>Diploma In UI/UX Design</h4>
-                                                <span>New York</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h5>NLP Master Practitioner</h5>
+                                                <h5>Transactional Analysis 101 Practitioner</h5>
+                                                <h5>Emotional Intelligence Train the Trainer</h5>
+                                                <h5>Hypnosis Practitioner & Master Practitioner</h5>
+                                                <h5>Institute of Leadership & Management (ILM) Level 5 Verifier</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_learnbox_left">
+                                            <div class="prt_about_learnbox_year">
+                                                <h1>2015</h1>
+                                            </div>
+                                            <div class="prt_about_learnbox_info">
+                                                <h5>Functional Rehabilitation & Exercise after Stroke </h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0">
+                                        <div class="prt_about_learnbox_right">
+                                            <div class="prt_about_learnbox_year">
+                                                <h1>2014</h1>
+                                            </div>
+                                            <div class="prt_about_learnbox_info">
+                                                <h5>Pilates Instructor</h5>
+                                                <p>Evidently a quiet year!</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_learnbox_left">
+                                            <div class="prt_about_learnbox_year">
+                                                <h1>2013</h1>
+                                            </div>
+                                            <div class="prt_about_learnbox_info">
+                                                <h5>Commando Training Centre – Royal Marines Coach & Mentor</h5>
+                                                <h5>CMI Level 5 Management Coaching & Mentoring </h5>
+                                                <h5>Cognitive Behaviour Therapy Diploma</h5>
+                                                <h5>Master Fitness Trainer & Specialist Coach</h5>
+                                                <h5>Indian Head Massage Practitioner</h5>
+                                                <h5>Diploma Warm Bamboo Massage</h5>
+                                                <h5>Practitioner Advanced Facilitation Skills Instructor</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0">
+                                        <div class="prt_about_learnbox_right">
+                                            <div class="prt_about_learnbox_year">
+                                                <h1>2012</h1>
+                                            </div>
+                                            <div class="prt_about_learnbox_info">
+                                                <h5>PGCE in Post Compulsory Education & Training</h5>
+                                                <h5>Anatomy & Physiology L3 Diploman</h5>
+                                                <h5>Body Massage Practitioner Diploma</h5>
+                                                <h5>Hot Stones Massage Practitioner Diploma</h5>
+                                                <h5>Neuro Linguistic Programming Practitioner</h5>
+                                                <h5>Specific Learning Difficulties Advisor</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -147,9 +200,24 @@
                                                 <h1>2010</h1>
                                             </div>
                                             <div class="prt_about_learnbox_info">
-                                                <h4>Diploma In Web Design</h4>
-                                                <span>New York</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h5>Level II Reiki Practitioner</h5>
+                                                <h5>Defence Train the Trainer </h5>
+                                                <h5>Trauma Risk Management Practitioner</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0">
+                                        <div class="prt_about_learnbox_right">
+                                            <div class="prt_about_learnbox_year">
+                                                <h1>2007</h1>
+                                            </div>
+                                            <div class="prt_about_learnbox_info">
+                                                <h5>First Degree Reiki Practitioner </h5>
+                                                <p>I’ll be completely honest; back then, having studied A-Level physics and being thoroughly immersed in classical science I thought Reiki was ‘one of those weird things’, and gave it little credit. But, in
+                                                    true scientific fashion I had to provide evidence to support that belief so I went for my own Reiki session. The experience was indeed weird; things occurred that I couldn’t logically explain using classical
+                                                    science theory. My inner sceptic was intrigued and so I studied, trained, reformed my beliefs and qualified as a Practitioner. My journey into Quantum Physics began and the rest, as they say, is history.
+                                                </p>
+
                                             </div>
                                         </div>
                                     </div>
@@ -367,13 +435,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <p>Copyright © 2018 <a href="#">Portfolio</a>. All Rights Reserved</p>
+                            <p>Copyright © 2020 <a href="#">The Mind Physio</a>. All Rights Reserved</p>
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
