--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Portfolio">
-    <meta name="keywords" content="Creative, minimal, Portfolio, cv, business, Resume, Information, personal portfolio, Professional">
-    <meta name="author" content="hsoft">
+    <meta name="keywords" content="Training, Coaching">
+    <meta name="author" content="Minnikin">
     <meta name="MobileOptimized" content="320">
     <!--Srart Style -->
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -43,7 +43,7 @@
             <div class="prt_menu_wrapper">
                 <a href="#about" class="prt_top">about</a>
                 <a href="#contact" class="prt_right">contact</a>
-                <a href="#services" class="prt_bottom">strength</a>
+                <a href="#services" class="prt_bottom">services</a>
                 <a href="#portfolio" class="prt_left">portfolio</a>
             </div>
             <div class="container">
@@ -77,8 +77,7 @@
                             <div class="prt_about_details">
                                 <p>I’ve always been fascinated with the mind; how easily we can all flip between feeling incredibly strong and empowered to painfully self-critical and fragile. In particular, how some injuries, physical or emotional, can
                                     have sustained and long-term effects on our confidence and beliefs, and how some people struggle to overcome such challenges, while others thrive. This I found especially intriguing considering that our ‘hardware’ is,
-                                    in the most part, the same for everyone”
-                                </p>
+                                    in the most part, the same for everyone” </p>
                                 <p>Being able to help others learn about the brain; the hardware, the software, and how to help rewire it, is at the core of Natasha’s passion; helping you feel empowered and in control of your thoughts, feeling and behaviours,
                                     regardless of what life throws at you</p>
                             </div>
@@ -230,7 +229,7 @@
                             <div class="prt_heading_wrapper">
                                 <div class="prt_heading">
                                     <h1>Experience</h1>
-                                    <p>involvement</p>
+                                    <p>Key Players</p>
                                 </div>
                             </div>
                             <div class="prt_about_experience">
@@ -238,26 +237,13 @@
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                         <div class="prt_about_experiencebox">
                                             <div class="prt_about_experience_year">
-                                                <h1>2012</h1>
-                                                <h4>July to 2013 Sep</h4>
+                                                <h1>2019</h1>
+                                                <h4>June to present</h4>
                                             </div>
                                             <div class="prt_about_experience_info">
-                                                <h4>Junior Ui/Ux Designer</h4>
-                                                <span>Amazon</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                        <div class="prt_about_experiencebox">
-                                            <div class="prt_about_experience_year">
-                                                <h1>2013</h1>
-                                                <h4>Oct to 2014 Dec</h4>
-                                            </div>
-                                            <div class="prt_about_experience_info">
-                                                <h4>Senior Ui/Ux Designer</h4>
-                                                <span>Adobe</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h4>Founder of Holistic Neuro Academy & The Mind Physio </h4>
+                                                <p>The culmination of the incredible learning journey, from the Conscious Mind, the Unconscious Mind and the Body as a Bio-electrical System. With over 10 years teaching experience, sharing this incredible
+                                                    paradigm with others, and helping them 1—1, is how HNA and The Mind Physio were born! Thank you for being a part of it. </p>
                                             </div>
                                         </div>
                                     </div>
@@ -265,25 +251,37 @@
                                         <div class="prt_about_experiencebox">
                                             <div class="prt_about_experience_year">
                                                 <h1>2015</h1>
-                                                <h4>Jun to 2015 Mar</h4>
+                                                <h4>Apr to Jun 2017</h4>
                                             </div>
                                             <div class="prt_about_experience_info">
-                                                <h4>Senior Ui/Ux Designer</h4>
-                                                <span>Google</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h4>Action for Rehabilitation from Neurological Injury (ARNI) </h4>
+                                                <p>Rehabilitating survivors of Acquired Brain Injury having been awarded a scholarship by ARNI to specialise in Stroke rehabilitation; training with Queen's College London and Middlesex University. In 2016
+                                                    I extended this work to the Early Supported discharge team at the Royal Shrewsbury Hospital. </p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                         <div class="prt_about_experiencebox">
                                             <div class="prt_about_experience_year">
-                                                <h1>2016</h1>
-                                                <h4>Apr to Present</h4>
+                                                <h1>2013</h1>
+                                                <h4>Dec to present</h4>
                                             </div>
                                             <div class="prt_about_experience_info">
-                                                <h4>Lead Ui/Ux Designer</h4>
-                                                <span>Google</span>
-                                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                                                <h4>Founded <a href="https://www.startfit.co.uk">STARTfit</a></h4>
+                                                <p>Offering rehabilitation to others who, like me, had been told they wouldn’t get better after injury. We focused on the mind, not just the body, to help rewiring thinking patterns, correct self-talk and challenge
+                                                    irrational beliefs. </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_experiencebox">
+                                            <div class="prt_about_experience_year">
+                                                <h1>2010</h1>
+                                                <h4>Sep to Present</h4>
+                                            </div>
+                                            <div class="prt_about_experience_info">
+                                                <h4>Military Trainer & Facilitator </h4>
+                                                <p>Leading a range of personal development courses for the MOD, I’m proud to say our team was Awarded a Commendation for our programmes and was listed in the 2019 Queen's Honours and Awards list. </p>
                                             </div>
                                         </div>
                                     </div>
@@ -325,8 +323,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="prt_heading_wrapper_2">
                                 <div class="prt_heading">
-                                    <h1>PROFILES</h1>
-                                    <p>WOrks At</p>
+                                    <h1>ACCREDITED</h1>
+                                    <p>courses</p>
                                 </div>
                             </div>
                             <div class="prt_profile_details">
@@ -476,23 +474,23 @@
                             <div class="prt_services_slider_box">
                                 <div class="prt_services_slider_text prt_img_click active" id="1">
                                     <img src="http://placehold.it/86X100" alt="Service icon">
-                                    <h4>Website Design</h4>
-                                    <p>It is a long established fact that a reader will be distracted</p>
+                                    <h4>1-2-1 Coaching</h4>
+                                    <p>Treating the Conscious Mind. Think Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click" id="2">
                                     <img src="http://placehold.it/86X100" alt="Service icon">
-                                    <h4>Graphic Design</h4>
-                                    <p>It is a long established fact that a reader will be distracted</p>
+                                    <h4>Hypnotherapy </h4>
+                                    <p>Treating the Unconscious Mind. Feel Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click" id="3">
                                     <img src="http://placehold.it/86X100" alt="Service icon">
-                                    <h4>Logo Design</h4>
-                                    <p>It is a long established fact that a reader will be distracted</p>
+                                    <h4>Applied Movement Neurology & Trauma Release </h4>
+                                    <p>Treating the Bio-Electrical System. Live Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click" id="4">
                                     <img src="http://placehold.it/86X100" alt="Service icon">
-                                    <h4>Web Development</h4>
-                                    <p>It is a long established fact that a reader will be distracted</p>
+                                    <h4>Provide Workshops, Retreats & Training </h4>
+                                    <p>Bringing Holistic Therapy to the 21st Century. 5-Day Residential Courses. </p>
                                 </div>
                             </div>
                         </div>
